cluster/apps/emqx/cluster/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: emqx
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
