cluster/apps/emqx/cluster/emqx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  namespace: emqx
  labels:
    external-dns-pihole: enable
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: "mdi:message-bulleted"
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
spec:
  rules:
  - host: &dashhost "emqx-dashboard.${SECRET_DOMAIN_A}"
    http:
      paths:
      - backend:
          service:
            name: emqx-dashboard
            port:
              name: dashboard
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - *dashhost
    secretName: emqx-dashboard-tls
